--- a/public/c/b/custom.css
+++ b/public/c/b/custom.css
@@ -1,5 +1,5 @@
 .register{
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+    background: -webkit-linear-gradient(left, #DA0C0C, #E34B4B);
     margin-top: 3%;
     padding: 3%;
 }
